# KahanMPI

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  Makefile.am  NOTES.md  README.md  VERSION  allreduce-kahan.cc  configure.ac
archive/: Makefile  basic.cc  kahan.h  origin-kahan-allreduce.cc  test-kahan-allreduce.c  test-kahan-summation.cc  test-kahan-wrapper.cc
m4/: acx_quadruple_precision.m4
src/: CMakeLists.txt  coll.c  debug.c  debug.h  gather_and_compensated.c  impl.c  initthread.c  kahanmpi.h  kahansum++.h  kahansum.h  local-reduction.c  mybool.h  myquad.h  promote.c  state.h  userdef_compensated.c  utils.c  utils.h
test/: CMakeLists.txt  Makefile.mk  test_assert.c  test_float_sum.c  test_integer_passthrough.c  verify_buffer.h
test/experiments/: Makefile
